# fantasy-basketball

./: .env  .gitignore  LICENSE.txt  README.md  pyproject.toml
src/fantasy_basketball/: __about__.py  __main__.py  settings.py
src/fantasy_basketball/fantasy_nerds/: api_calls.py
tests/: __init__.py
