[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantasy-basketball"
dynamic = ["version"]
description = 'Fantasy basketball application backend.'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Tyler Urban", email = "tyurban@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/tyurban/fantasy-basketball#readme"
Issues = "https://github.com/tyurban/fantasy-basketball/issues"
Source = "https://github.com/tyurban/fantasy-basketball"

[tool.hatch.version]
path = "src/fantasy_basketball/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
fantasy_basketball = "python src/fantasy_basketball/__main__.py"

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/fantasy_basketball tests}"

[tool.coverage.run]
source_pkgs = ["fantasy_basketball", "tests"]
branch = true
parallel = true
omit = [
  "src/fantasy_basketball/__about__.py",
]

[tool.coverage.paths]
fantasy_basketball = ["src/fantasy_basketball", "*/fantasy-basketball/src/fantasy_basketball"]
tests = ["tests", "*/fantasy-basketball/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
